--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eventsource": "^2.0.2",
     "framer-motion": "^11.3.30",
     "geist": "^1.3.1",
+    "lucide-react": "^0.441.0",
     "nanoid": "^5.0.7",
     "next": "14.2.6",
     "next-auth": "5.0.0-beta.4",
