Add README.md file

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ KV_URL=XXXXXXXX
 KV_REST_API_URL=XXXXXXXX
 KV_REST_API_TOKEN=XXXXXXXX
 KV_REST_API_READ_ONLY_TOKEN=XXXXXXXX
+
+
+# Langflow connection
+NEXT_PUBLIC_LANGFLOW_API_KEY=XXXXXXXXXXX
+NEXT_PUBLIC_LANGFLOW_BACKEND=XXXXXXXXXXXXX
+NEXT_PUBLIC_LANGFLOW_ID=XXXXXXXXXXX
