--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eventsource": "^2.0.2",
+    "eventsource-polyfill": "^0.9.6",
     "framer-motion": "^11.3.30",
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
