--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
   "include": [
     "next-env.d.ts",
     "next-auth.d.ts",
+    "eventsource-polyfill.d.ts",
     "**/*.ts",
+    "types",
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
